# YNAB-Balance-Monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  monitor.py  pyproject.toml  ynab_balance_monitor.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
tests/: test_api.py  test_caching.py  test_delta.py  test_notifications.py
